Issue #3277033: Fix search icon overlapping long text in input auto complete fields

--- a/scss/vartheme-claro.theme.style-rtl.scss
+++ b/scss/vartheme-claro.theme.style-rtl.scss
@@ -23,3 +23,12 @@ body {
 #yoast-wrapper {
   direction: ltr;
 }
+
+.views-exposed-form__item {
+
+  .ui-autocomplete-input {
+    padding-right: calc(1rem - 1px);
+    padding-left: calc(32px);
+  }
+
+}
