--- a/scss/vartheme-claro.theme.style.scss
+++ b/scss/vartheme-claro.theme.style.scss
@@ -22,6 +22,10 @@ input[type="text"] {
     width: 12rem;
   }
 
+  .ui-autocomplete-input {
+    padding-right: 32px;
+  }
+
 }
 
 .node-form {
